spacing fixes

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -36,9 +36,10 @@ CTA
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-size: 100%;  
     height: 100%;
     width: 100%;
-    position: relative;
+//    position: relative;
 }
 
 .nav-bar {
@@ -159,15 +160,6 @@ ABOUT
     font-size: 1.8em;
 }
 
-//@media only screen and (min-width: 40.063em) and (max-width: 64em) {
-//    .about img {
-//        max-width: 20%;
-//    }
-//    .profile-picture {
-//        text-align: center;
-//    }
-//}
-
 @media only screen and (max-width: 64em) {
     
     .about {
@@ -183,13 +175,6 @@ ABOUT
 /*#########################################
 WORK
 #########################################*/
-
-.lg-row {
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: initial;
-}
 
 .work h4 {
     font-weight: 700;
@@ -219,13 +204,7 @@ WORK
     text-align: center;
 }
 
-@media only screen and (min-width: 40.063em) and (max-width: 64em) {
-    .work img {
-        max-width: 65%;
-    }
-}
-
-@media only screen and (max-width: 64em) {
+@media only screen and (max-width: 40em) {
     .work-section-1, .work-section-2 {
         padding-top: 5em;
         padding-bottom: 5em;
@@ -233,6 +212,22 @@ WORK
     
     .work img {
         padding-bottom: 1.3em;
+    }
+}
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { 
+    .work-section-1, .work-section-2 {
+        padding-top: 7em;
+        padding-bottom: 7em;
+    }
+}
+
+@media only screen and (min-width: 64.063em) { 
+    .lg-row {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: initial;
     }
 }
 
